kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: villainnumberone
spec:
  ingressClassName: nginx
  rules:
    - host: villainnumberone.cloud.okteto.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-service
                port:
                  number: 8010
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
          - path: /idp/
            pathType: Prefix
            backend:
              service:
                name: idp-service
                port:
                  number: 8000
